--- a/admin/css/main.css
+++ b/admin/css/main.css
@@ -21,8 +21,8 @@ body {
 /* Sidebar Styles */
 .sidebar {
   width: 240px;
-  background-color: white;
-  border-right: 1px solid #eaedf0;
+  background-color:#cae9b9;
+  border-right: 1px solid #cae9b9;
   display: flex;
   flex-direction: column;
   padding: 20px 0;
@@ -70,8 +70,8 @@ body {
 
 .nav-item.active {
   background-color: #f8f9fa;
-  border-left: 3px solid #152e22;
-  color: #152e22;
+  border-left: 3px solid #2a4a3a;
+  color:  #2a4a3a;
 }
 
 .nav-icon {
@@ -127,7 +127,7 @@ body {
 }
 
 input:checked + .slider {
-  background-color: #152e22;
+  background-color:  #2a4a3a;
 }
 
 input:checked + .slider:before {
@@ -1476,7 +1476,7 @@ input:checked + .toggle-slider:before {
   .sidebar {
     width: 100%;
     border-right: none;
-    border-bottom: 1px solid #eaedf0;
+    border-bottom: 1px solid #cfe7cc;
     padding: 10px 0;
   }
 
