--- a/admin/css/main.css
+++ b/admin/css/main.css
@@ -21,11 +21,11 @@ body {
 /* Sidebar Styles */
 .sidebar {
   width: 240px;
-  background-color:#cae9b9;
-  border-right: 1px solid #cae9b9;
+  background-color:#176340;
   display: flex;
   flex-direction: column;
   padding: 20px 0;
+  border-radius: 0px 20px 20px 0px;
 }
 
 .logo {
@@ -33,7 +33,8 @@ body {
   align-items: center;
   padding: 0 20px 20px;
   margin-bottom: 10px;
-  border-bottom: 1px solid #eaedf0;
+ 
+ 
 }
 
 .logo img {
@@ -44,8 +45,8 @@ body {
 
 .logo span {
   font-weight: 600;
-  font-size: 18px;
-  color: #152e22;
+  font-size: 25px;
+  color: #ffffff;
 }
 
 .nav-menu {
@@ -58,20 +59,21 @@ body {
   display: flex;
   align-items: center;
   padding: 12px 20px;
-  color: #666;
+  color: #ffffff;
   text-decoration: none;
-  transition: background-color 0.2s;
   cursor: pointer;
+  margin-left: 20px;
 }
 
 .nav-item:hover {
-  background-color: #f8f9fa;
+  background-color: #176340;
 }
 
 .nav-item.active {
-  background-color: #f8f9fa;
-  border-left: 3px solid #2a4a3a;
-  color:  #2a4a3a;
+  background-color: #f5f7fa;
+  border-radius: 20px 0px 0px 20px; 
+  color:  #2e4725;
+  margin-left: 20px;
 }
 
 .nav-icon {
@@ -1565,3 +1567,4 @@ input:checked + .toggle-slider:before {
     margin-bottom: 5px;
   }
 }
+
